Fixed back to top button visibility
Fixed back to top button visibility - Visible the whole time

--- a/style.css
+++ b/style.css
@@ -117,6 +117,7 @@ button:hover{
 }
 
 #topBtn{
+    visibility: hidden;
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -148,15 +149,15 @@ button:hover{
     transition: 0.1s;
 }
 
-.menu-toggle.active span: nth-child(1){
+.menu-toggle.active span:nth-child(1){
     transform: rotate(45deg) translate(5px,5px);
 }
 
-.menu-toggle.active span: nth-child(2){
+.menu-toggle.active span:nth-child(2){
     opacity: 0;
 }
 
-.menu-toggle.active span: nth-child(3){
+.menu-toggle.active span:nth-child(3){
     transform: rotate(-45deg) translate(6px,-6px);
 }
 
